--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p class="bodyCopy">1000 Browns Lane, St. Matthews, KY 40207</p></div>
         </div>
         <div class="wmopg" style="text-align: center;">
-            <h1>WHAT MAKES OUR PARK GREAT</h1><br>
+            <h1>COME VISIT!</h1><br>
                 <p class="bodyCopy">We offer plenty of activities and ways to spend your day. Host your cookout with our BBQ Grills, or enjoy a walk through our scenic trails. We have a playground too, so feel free to bring the kids! Our duck & geese pond is always a relaxing way to spend some time, and our historic cemetary has been around for over 200 years. However you're looking to spend the day, we've got you covered.</p><br>
         </div>
     </div>
