--- a/brownparkamenities.html
+++ b/brownparkamenities.html
@@ -9,14 +9,11 @@
 <body>
     
 <div class="wrapper">
-    <h1 class="siteHeader">Brown Park</h1>
+    <a href="./index.html"><img class="siteLogo" src="./images/BrownLogo.png"></a>
 </div>
-
-<div class="subhead">1000 Browns Lane, St. Matthews, KY 40207</div>
 
 <div class="header">
     <div class="headerLinksDiv">
-        <a class="headerLinks" href="./index.html">Home</a>
         <a style="color:rgb(187, 187, 187)" class="headerLinks" href="./brownparkamenities.html">Amenities</a>
         <a class="headerLinks" href="./brownparkphotos.html">Photos</a>
         <a class="headerLinks" href="./brownparkdonations.html">Donations</a>
