--- a/brownparkdonations.html
+++ b/brownparkdonations.html
@@ -9,14 +9,11 @@
 <body>
         
 <div class="wrapper">
-    <h1 class="siteHeader">Brown Park</h1>
+    <a href="./index.html"><img class="siteLogo" src="./images/BrownLogo.png"></a>
 </div>
-
-<div class="subhead">1000 Browns Lane, St. Matthews, KY 40207</div>
 
 <div class="header">
     <div class="headerLinksDiv">
-        <a class="headerLinks" href="./index.html">Home</a>
         <a class="headerLinks" href="./brownparkamenities.html">Amenities</a>
         <a class="headerLinks" href="./brownparkphotos.html">Photos</a>
         <a style="color: rgb(187, 187, 187);" class="headerLinks" href="./brownparkdonations.html">Donations</a>
@@ -26,9 +23,11 @@
 <div class="spacer"></div>
 
 <div class="donationDiv">
-    <h1>DONATE TO BROWN PARK TODAY!</h1><br>
+    <h1>DONATE TODAY!</h1><br>
     <p class="bodyCopy2">At Brown Park, we are operated and maintained by your donations. Our playground installment, walking bridges, and on-site bathroom facilities were all provided by public donations. If you feel like you've gotten value out of enjoying our park, consider making a small contribution!</p>
-</div> 
+</div>
+
+<div class="spacer"></div>
 
 <div class="formDiv">
     <form class="donationForm">
