--- a/brownparkamenities.html
+++ b/brownparkamenities.html
@@ -28,9 +28,7 @@
                 <li><a class='dropdown-arrow'>More</a>
                 <ul class='sub-menus'>
                 <li><a href="./index.html">Home</a></li>
-                <li><a>Contact Us</a></li>
-                <li><a>Other Parks</a></li>
-                <li><a>Report Incident</a></li>
+                <li><a href="./figma.html">Figma Mockups</a></li>
                 </ul>
                 </li>
             </ul>
@@ -50,8 +48,8 @@
 </script>
 
 <div class="introText">
-    <h1 style="text-align: center;">Why You Should Come Visit!</h1><br>
-    <p class="bodyCopy" style="margin-left: 40px; margin-right: 40px;">Our park has plenty of offerings for people of all ages. Whether you're looking to go for a run or just enjoy a scenic break, we've got you covered. Check out our offerings below! </p>
+    <h1 style="text-align: center; color: white;">Why You Should Come Visit!</h1><br>
+    <p class="bodyCopy" style="text-align: center; color: black; padding-left: 20px; padding-right: 20px;">Our park has plenty of offerings for people of all ages. Whether you're looking to go for a run or just enjoy a scenic break, we've got you covered. Check out our offerings below! </p>
 </div>
 
 <div class="spacer"></div>
@@ -111,7 +109,11 @@
 
 <div class="spacer"></div>
 
-<div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+<div class="backToTopBox">
+    <div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+</div>
+
+<div class="spacer"></div>
 
 <div class="footer">
     <p class="footerText">1000 Browns Lane, St. Matthews, KY 40207</p>
