--- a/brownparkphotos.html
+++ b/brownparkphotos.html
@@ -29,9 +29,7 @@
                 <li><a class='dropdown-arrow'>More</a>
                 <ul class='sub-menus'>
                 <li><a href="./index.html">Home</a></li>
-                <li><a>Contact Us</a></li>
-                <li><a>Other Parks</a></li>
-                <li><a>Report Incident</a></li>
+                <li><a href="./figma.html">Figma Mockups</a></li>
                 </ul>
                 </li>
             </ul>
@@ -133,7 +131,11 @@ even though nothing will actually upload to the site-->
 
 <div class="spacer"></div>
 
-<div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+<div class="backToTopBox">
+    <div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+</div>
+
+<div class="spacer"></div>
 
 <div class="footer">
     <p class="footerText">1000 Browns Lane, St. Matthews, KY 40207</p>
