--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                 <li><a class='dropdown-arrow'>More</a>
                 <ul class='sub-menus'>
                 <li><a href="./index.html">Home</a></li>
-                <li><a>Contact Us</a></li>
-                <li><a>Other Parks</a></li>
-                <li><a>Report Incident</a></li>
+                <li><a href="./figma.html">Figma Mockups</a></li>
                 </ul>
                 </li>
             </ul>
@@ -49,26 +47,33 @@
 }
 </script>
 
-<img class="signImg" src="./images/bluesky.jpg">
-
-<div class="spacer"></div>
+<div class="mainInfo">
+    <img class="signImg" src="./images/bluesky.jpg">
 
 <div class="topTextContainer">
     <div class="textDiv1">
         <div class="hoursLocation">
-            <div><h1 class="lora-h1">Hours</h1 class="lora-h1"><br><p class="bodyCopy">Sunday-Monday</p><br>
+            <div><h1 class="lora-h1">Hours</h1 class="lora-h1"><br><p class="bodyCopy">Sunday-Monday</p>
                           <p class="bodyCopy">7AM-8PM</p></div>
             <div><h1 class="lora-h1">Location</h1 class="lora-h1"><br>
                 <p class="bodyCopy">1000 Browns Lane, St. Matthews, KY 40207</p></div>
         </div>
         <div class="wmopg" style="text-align: center;">
             <h1 class="lora-h1">Come Visit!</h1 class="lora-h1"><br>
-                <p class="bodyCopy">We offer plenty of activities and ways to spend your day. Host your cookout with our BBQ Grills, or enjoy a walk through our scenic trails. We have a playground too, so feel free to bring the kids! Our duck & geese pond is always a relaxing way to spend some time, and our historic cemetary has been around for over 200 years. However you're looking to spend the day, we've got you covered.</p><br>
+                <p class="bodyCopy">Brown Park was founded in 1977 when the James Graham Brown family donated the land to the city of St. Matthews. It was recognized in 1997 as an award winning public park by the Landscape Architecture Magazine. And at a whopping 28 acres in size, you will be provided with ample room for play, a nice walk, or just a peaceful day out.</p><br>
         </div>
     </div>
 </div>
 
+</div>
+
 <div class="spacer"></div>
+
+<div class="heroImage">
+    <h1 class="lora-h1" style="color: white; text-align: center;">Guest Photos</h1>
+        <a href="./brownparkphotos.html"><img class="signImg2" src="./images/park2.jpg"></a>
+        
+</div>
 
 <div class="photoCarousel">
 
@@ -343,7 +348,7 @@ function goToIndexSlide(index) {
 slideInitial();
 </script>
 
-<div class="spacer2"></div>
+<div class="spacer"></div>
 
 <div class="rulesDiv">
 <h1 class="lora-h1" style="text-align: center;">Park Rules</h1><br>
@@ -360,23 +365,22 @@ slideInitial();
 
 <div class="spacer"></div>
 
-<div class="heroImage"><img class="signImg" src="./images/park2.jpg"></div>
-
-<div class="spacer"></div>
-
-<div class="historySection"><h1 class="lora-h1" style="text-align: center;">History of Brown Park</h1 class="lora-h1"><br>
-    <p class="bodyCopy" style="line-height: 40px; text-align: left;">Brown Park was founded in 1977 when the James Graham Brown family donated the land to the city of St. Matthews. It was recognized in 1997 as an award winning public park by the Landscape Architecture Magazine. And at a whopping 28 acres in size, you will be provided with ample room for play, a nice walk, or just a peaceful day out.</p>
-</div>
-
-<div class="spacer"></div>
-
+<div class="embedMapCard">
+<div class="findUs"><h1 class="lora-h1" style="color: white; text-align: center;">Find us on Google Maps!</h1></div>
 <div class="embedMap">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1876.3032586448494!2d-85.63579459038559!3d38.23876888667982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8869752d988b2e7f%3A0x649aeb4dc07ed125!2sBrown%20Park!5e0!3m2!1sen!2sus!4v1744305044826!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1876.3032586448494!2d-85.63579459038559!3d38.23876888667982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8869752d988b2e7f%3A0x649aeb4dc07ed125!2sBrown%20Park!5e0!3m2!1sen!2sus!4v1744305044826!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 </div>
 
 <div class="spacer"></div>
 
-<div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+<div class="backToTopBox">
+    <div class="backToTop"><a class="bottomLink" href="#top">Back to top</a></div>
+</div>
+
+<div class="spacer"></div>
+
+
 
 <div class="footer">
     <p class="footerText">1000 Browns Lane, St. Matthews, KY 40207</p>
